--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -169,18 +169,20 @@ jobs:
         if: matrix.crypto == 'standard'
       - name: Added Trusted Certs
         run: |
-          sudo chmod -R 777 ./keys 
+          sudo chmod -R 777 ./keys
           sudo apt-get install -y ca-certificates
           sudo cp ./keys/localhost.crt /usr/local/share/ca-certificates
           sudo update-ca-certificates
       - run: docker compose up -d --wait --wait-timeout 240
       - run: go run ./service provision keycloak
       - run: go run ./service provision fixtures
+      - run: 
       - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
         name: start server in background
         with:
           run: |
-            go run ${{ matrix.crypto == 'hsm' && '--tags=opentdf.hsm' || '' }} ./service start
+            go build -o service-app ${{ matrix.crypto == 'hsm' && '--tags=opentdf.hsm' || '' }} ./service
+            .github/scripts/watch.sh ./service-app start
           wait-on: |
             tcp:localhost:8080
           log-output-if: true
