--- a/.air.toml
+++ b/.air.toml
@@ -15,7 +15,7 @@ tmp_dir = "tmp"
   full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html", "rego"]
-  include_file = ["opentdf.yaml"]
+  include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
   rerun = false
