--- a/.air.toml
+++ b/.air.toml
@@ -9,16 +9,16 @@ tmp_dir = "tmp"
   delay = 0
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs", "examples"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go^", ".tdf^", ".ntdf^"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html", "rego"]
-  include_file = []
+  include_file = ["opentdf.yaml"]
   kill_delay = "0s"
   log = "build-errors.log"
-  rerun = false
+  rerun = true
   rerun_delay = 500
   send_interrupt = false
   stop_on_error = true
