--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -179,8 +179,9 @@ jobs:
       - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
         name: start server in background
         with:
-          run: |
-            go run ${{ matrix.crypto == 'hsm' && '--tags=opentdf.hsm' || '' }} ./service start
+          run: >
+            go build -o opentdf ${{ matrix.crypto == 'hsm' && '--tags=opentdf.hsm' || '' }} -v service/main.go
+            && .github/scripts/watch.sh opentdf.yaml ./opentdf start
           wait-on: |
             tcp:localhost:8080
           log-output-if: true
@@ -189,6 +190,7 @@ jobs:
       - name: Setup Bats and bats libs
         uses: bats-core/bats-action@2.0.0
       - run: test/service-start.bats
+      - run: test/tdf-roundtrips.bats
       - name: create roundtrip test data and run tests
         run: go test ./service/rttests -v
 
