--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -187,23 +187,15 @@ server:
   cryptoProvider:
     type: standard
     standard:
-      rsa:
-        123:
-          privateKeyPath: kas-private.pem
-          publicKeyPath: kas-cert.pem
-        456:
-          privateKeyPath: kas-private.pem
-          publicKeyPath: kas-cert.pem
-      ec:
-        secp256r1:
-          privateKeyPath: kas-secp256r1-private.pem
-          publicKeyPath: kas-secp256r1-cert.pem
-        secp384r1:
-          privateKeyPath: kas-secp384r1-private.pem
-          publicKeyPath: kas-secp384r1-cert.pem
-        secp521r1:
-          privateKeyPath: kas-secp521r1-private.pem
-          publicKeyPath: kas-secp521r1-cert.pem
+      keys:
+        - kid: r1
+          alg: rsa:2048
+          private: kas-private.pem
+          cert: kas-cert.pem
+        - kid: e1
+          alg: ec:secp256r1
+          private: kas-ec-private.pem
+          cert: kas-ec-cert.pem
   port: 8080
 opa:
   embedded: true # Only for local development
