--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -96,23 +96,15 @@ server:
   cryptoProvider:
     type: standard
     standard:
-      rsa:
-        123:
-          privateKeyPath: /keys/kas-private.pem
-          publicKeyPath: /keys/kas-cert.pem
-        456:
-          privateKeyPath: /keys/kas-private.pem
-          publicKeyPath: /keys/kas-cert.pem
-      ec:
-        secp256r1:
-          privateKeyPath: /keys/kas-secp256r1-private.pem
-          publicKeyPath: /keys/kas-secp256r1-cert.pem
-        secp384r1:
-          privateKeyPath: /keys/kas-secp384r1-private.pem
-          publicKeyPath: /keys/kas-secp384r1-cert.pem
-        secp521r1:
-          privateKeyPath: /keys/kas-secp521r1-private.pem
-          publicKeyPath: /keys/kas-secp521r1-cert.pem
+      keys:
+        - kid: r1
+          alg: rsa:2048
+          private: /keys/kas-private.pem
+          cert: /keys/kas-cert.pem
+        - kid: e1
+          alg: ec:secp256r1
+          private: /keys/kas-ec-private.pem
+          cert: /keys/kas-ec-cert.pem
   port: 8080
 opa:
   embedded: true # Only for local development
