wip: request ID working, working on request IP and user-agent

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -86,6 +86,7 @@ server:
       - Authorization
       - Content-Type
       - X-CSRF-Token
+      - X-Request-ID
     # List of response headers that browsers are allowed to access
     exposedheaders:
       - Link
