Add new encryption keys to YAML files
New encryption keys have been added to both `opentdf-dev.yaml` and `opentdf-example.yaml` files. The keys are of elliptic curve cryptographic type with identifiers e2 and e3, corresponding to different security levels.

--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -105,6 +105,14 @@ server:
           alg: ec:secp256r1
           private: /keys/kas-ec-private.pem
           cert: /keys/kas-ec-cert.pem
+        - kid: e2
+          alg: ec:secp384r1
+          private: /keys/kas-secp384r1-private.pem
+          cert: /keys/kas-secp384r1-cert.pem
+        - kid: e3
+          alg: ec:secp521r1
+          private: /keys/kas-secp521r1-private.pem
+          cert: /keys/kas-secp521r1-cert.pem
   port: 8080
 opa:
   embedded: true # Only for local development
