Add new keys to opentdf-dev.yaml
Three new keys, e2 with ec:secp384r1, e3 with ec:secp521r1, and a legacy e2 key, and a legacy e3 key have been added to the configuration file. These keys enhance the algorithm compatibility and secure communications with the legacy system.

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -17,6 +17,16 @@ services:
       - kid: e1
         alg: ec:secp256r1
         legacy: true
+      - kid: e2
+        alg: ec:secp384r1
+      - kid: e2
+        alg: ec:secp384r1
+        legacy: true
+      - kid: e3
+        alg: ec:secp521r1
+      - kid: e3
+        alg: ec:secp521r1
+        legacy: true
       - kid: r1
         alg: rsa:2048
       - kid: r1
