add to release please, remove service upadtes

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -70,6 +70,7 @@ jobs:
           - service
           - lib/ocrypto
           - lib/fixtures
+          - lib/flattening
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
         with:
