chore(ci): replaces awk with go mod edit
- The `go mod edit` (and associated commands), with jq, provides more clear, and less brittle, functionality to inspect and modify replace and require directives than relying on grep, awk, etc.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -89,7 +89,7 @@ jobs:
         run: ./.github/scripts/work-init.sh
       - if:  github.head_ref == format('release-please--branches--main--components--{0}', matrix.directory)
         name: prevent tagging with replace directives
-        run: awk '/^replace /{r=1};END{exit !r}' go.mod
+        run: go mod edit --json | jq -e '.Replace | not'
         working-directory: ${{ matrix.directory }}
       - run: go mod download
         working-directory: ${{ matrix.directory }}
