--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,13 +81,11 @@ jobs:
           cd ${{matrix.path}}
           for x in ${{join(fromJson(needs.release-please.outputs.paths_released), ' ')}}; do
             pkg=github.com/opentdf/platform/${x}
-            if awk -v p="^replace ${pkg}"  '$0 !~ p {r=1; print};END{exit !r}' go.mod > go.mod.tmp; then
-              mv go.mod.tmp go.mod
-            else
-              rm go.mod.tmp
+            if go mod edit --json | jq -e '.Replace.[] | select(.Old.Path == env.pkg)'; then
+              go mod edit --dropreplace=$pkg
             fi
             echo "Should we update [${pkg}] in [${{ matrix.path }}]?"
-            if grep "$pkg"<go.mod; then
+            if go mod edit --json | jq -e '.Require.[] | select(.Path == env.pkg)'; then
               ver=$(jq -r .\[\"${x}\"\] < "${GITHUB_WORKSPACE}/.release-please-manifest.json")
               echo "go get ${pkg}@v${ver}"
               go get "${pkg}@v${ver}"
