--- a/.github/workflows/friendly-reminders.yaml
+++ b/.github/workflows/friendly-reminders.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Extract go version
         id: go-version
         run: |
-          echo "go-version=$(cat go.work | grep -E "^go\s\d+\.\d+" | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "go-version=$(go work edit --json | jq -r '.Go')" >>$GITHUB_OUTPUT
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ steps.go-version.outputs.go-version }}
