--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -199,11 +199,16 @@ jobs:
       - run: test/tdf-roundtrips.bats
       - name: create roundtrip test data and run tests
         run: go test ./service/rttests -v
-      - name: enable custom rego policy
-        run: yq eval '.services.authorization.rego.path = "./test/rego/entitlements.rego"' -i opentdf.yaml
+      - name: enable staic entitlements rego policy
+        run: yq eval '.services.authorization.rego.path = "./test/rego/static-entitlements.rego"' -i opentdf.yaml
       - run: sleep 30
-      - name: validate custom rego policy
-        run: test/rego/custom-rego.bats
+      - name: validate static rego policy
+        run: test/rego/static-entitlements.bats
+      - name: enable custom entity rego policy
+        run: yq eval '.services.authorization.rego.path = "./test/rego/custom-entity.rego"' -i opentdf.yaml
+      - run: sleep 30
+      - name: validate custom entity rego policy
+        run: test/rego/custom-entity.bats
 
   image:
     name: image build
