--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,4 +1,4 @@
-name: "Checks"
+name: 'Checks'
 
 env:
   IS_RELEASE_BRANCH: ${{ startsWith(github.head_ref, 'release-please-') }}
@@ -77,7 +77,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.3"
+          go-version: '1.22.3'
           check-latest: false
           cache-dependency-path: |
             examples/go.sum
@@ -87,7 +87,7 @@ jobs:
       - if: env.IS_RELEASE_BRANCH == 'true'
         name: prevent depending on unreleased upstream changes
         run: ./.github/scripts/work-init.sh
-      - if:  github.head_ref == format('release-please--branches--main--components--{0}', matrix.directory)
+      - if: github.head_ref == format('release-please--branches--main--components--{0}', matrix.directory)
         name: prevent tagging with replace directives
         run: go mod edit --json | jq -e '.Replace | not'
         working-directory: ${{ matrix.directory }}
@@ -144,7 +144,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.3"
+          go-version: '1.22.3'
           check-latest: false
           cache-dependency-path: |
             service/go.sum
@@ -224,10 +224,10 @@ jobs:
       - uses: bufbuild/buf-breaking-action@a074e988ee34efcd4927079e79c611f428354c01
         with:
           input: service
-          against: "https://github.com/opentdf/platform.git#branch=main,subdir=service"
+          against: 'https://github.com/opentdf/platform.git#branch=main,subdir=service'
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.3"
+          go-version: '1.22.3'
           check-latest: false
           cache-dependency-path: |
             service/go.sum
@@ -251,7 +251,7 @@ jobs:
 
   ci:
     needs:
-      - buflint
+      # - buflint
       - go
       - image
       - integration
@@ -270,7 +270,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.4"
+          go-version: '1.22.4'
           check-latest: false
           cache: false
       - name: install go-licenses
