--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -123,3 +123,6 @@ server:
   port: 8080
 opa:
   embedded: true # Only for local development
+sensitiveKeys:
+  clientsecret: true
+  password: true
