--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -112,3 +112,6 @@ server:
   port: 8080
 opa:
   embedded: true # Only for local development
+sensitiveKeys:
+  clientsecret: true
+  password: true
