chore(ci): Adds zap test
This is still failing since i don't know how to get  it to set the local network alias.

`docker run -v $(pwd):/zap/wrk/:rw --network="host" -t zaproxy/zap-stable zap-api-scan.py -t docs/openapi/kas/kas.swagger.json -f openapi -O http://localhost:8080` seems wrong. Maybe `i

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -200,7 +200,11 @@ jobs:
       - name: create roundtrip test data and run tests
         run: go test ./service/rttests -v
       - name: owasp zap api check
-        
+        uses: zaproxy/action-api-scan@v0.7.0
+        with:
+          format: openapi
+          target: 'docs/openapi/kas/kas.swagger.json'
+          cmd_options: '-O localhost:8080'
 
   image:
     name: image build
