changes according to comments

--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -113,5 +113,5 @@ server:
 opa:
   embedded: true # Only for local development
 sensitiveKeys:
-  clientsecret: true
-  password: true
+  - clientsecret
+  - password
