--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -124,5 +124,5 @@ server:
 opa:
   embedded: true # Only for local development
 sensitiveKeys:
-  clientsecret: true
-  password: true
+  - clientsecret
+  - password
