--- a/opentdf-example-no-kas.yaml
+++ b/opentdf-example-no-kas.yaml
@@ -51,5 +51,5 @@ server:
 opa:
   embedded: true # Only for local development
 sensitiveKeys:
-  clientsecret: true
-  password: true
+  - clientsecret
+  - password
