--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -119,5 +119,5 @@ server:
 opa:
   embedded: true # Only for local development
 sensitiveKeys:
-  clientsecret: true
-  password: true
+  - clientsecret
+  - password
