handle clients, users, and emails the dne

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -37,6 +37,9 @@ services:
     clientsecret: 'secret'
     realm: 'opentdf'
     legacykeycloak: true
+    unknownentities:
+      enabled: true
+      entitytypes: [emailAddress, userName, clientId]
 server:
   auth:
     enabled: true
