--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -22,6 +22,9 @@ services:
     clientsecret: "secret"
     realm: "opentdf"
     legacykeycloak: true
+    unknownentities:
+      enabled: true
+      entitytypes: [emailAddress, userName, clientId]
   authorization:
     enabled: true
     ersurl: http://localhost:8080/entityresolution/resolve
