feat(authz): Keycloak ERS ability to handle clients, users, and emails that dont exist (#1113)
should resolve all
https://github.com/opentdf/platform/issues/1063
https://github.com/opentdf/platform/issues/1036
https://github.com/opentdf/platform/issues/1055

---------

Co-authored-by: David Mihalcik <dmihalcik@virtru.com>

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -37,6 +37,10 @@ services:
     clientsecret: 'secret'
     realm: 'opentdf'
     legacykeycloak: true
+    inferid:
+      from:
+        email: true
+        username: true
 server:
   auth:
     enabled: true
