--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -22,6 +22,10 @@ services:
     clientsecret: "secret"
     realm: "opentdf"
     legacykeycloak: true
+    inferid:
+      from:
+        email: true
+        username: true
   authorization:
     enabled: true
     ersurl: http://localhost:8080/entityresolution/resolve
