--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -302,6 +302,21 @@ jobs:
       - run: sleep 30
       - name: validate custom entity rego policy
         run: test/rego/custom-entity.bats
+      - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
+        name: start another KAS server in background
+        with:
+          run: >
+            go build -o opentdf -v service/main.go
+            && <opentdf.yaml >opentdf-beta.yaml yq e '
+              (.server.port = 8282)
+              | (.services.authorization.ersurl = "http://localhost:8282/entityresolution/resolve")
+            '
+            && .github/scripts/watch.sh opentdf-beta.yaml ./opentdf --config-file ./opentdf-beta.yaml start
+          wait-on: |
+            tcp:localhost:8282
+          log-output-if: true
+          wait-for: 90s
+      - run: test/multi-kas.bats
 
   image:
     name: image build
