--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -14,4 +14,4 @@ jobs:
       - uses: hmarr/auto-approve-action@v4
         if: |
           github.actor == 'opentdf-automation' &&
-          startsWith(github.event.pull_request.title, 'fix(core): Autobump'
+          startsWith(github.event.pull_request.title, 'fix(core): Autobump')
