--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -11,14 +11,18 @@ jobs:
       - run: |
           echo "actor: ${{ github.actor }}"
           echo "title: ${{ github.event.pull_request.title }}"
-      - run:
+      - id: bad-files
+        run:
           bad_files=$(gh pr view --json files | jq '[.files[].path | select(endswith("go.mod") or endswith("go.sum") | not)] | length')
           if [ "$bad_files" -ne 0 ]; then
             echo "Found $bad_files files that are not go.mod or go.sum. Will not auto approve."
-            exit 1
+            echo "bad_files_found=true" >> $GITHUB_ENV
+          else
+            echo "bad_files_found=false" >> $GITHUB_ENV
+            echo "Only go.mod and go.sum files found. Continuing Workflow."
           fi
-          echo "Only go.mod and go.sum files found. Continuing Workflow."
       - uses: hmarr/auto-approve-action@v4
         if: |
           github.actor == 'opentdf-automation' &&
-          startsWith(github.event.pull_request.title, 'fix(core): Autobump'
+          startsWith(github.event.pull_request.title, 'fix(core): Autobump' &&
+          outputs.bad_files_found != 'true'
