--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -23,6 +23,6 @@ jobs:
           fi
       - uses: hmarr/auto-approve-action@v4
         if: |
-          github.actor == 'opentdf-automation' &&
+          github.actor == 'opentdf-automation[bot]' &&
           startsWith(github.event.pull_request.title, 'fix(core): Autobump' &&
           outputs.bad_files_found != 'true'
