--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -25,4 +25,4 @@ jobs:
         if: |
           github.actor == 'opentdf-automation[bot]' &&
           startsWith(github.event.pull_request.title, 'fix(core): Autobump' &&
-          outputs.bad_files_found != 'true'
+          env.bad_files_found != 'true'
