--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -24,5 +24,5 @@ jobs:
       - uses: hmarr/auto-approve-action@v4
         if: |
           github.actor == 'opentdf-automation[bot]' &&
-          startsWith(github.event.pull_request.title, 'fix(core): Autobump' &&
+          startsWith(github.event.pull_request.title, 'fix(core): Autobump') &&
           env.bad_files_found != 'true'
