chore(ci): multi-line step fix

--- a/.github/workflows/auto-approve-version-bumps.yaml
+++ b/.github/workflows/auto-approve-version-bumps.yaml
@@ -12,7 +12,7 @@ jobs:
           echo "actor: ${{ github.actor }}"
           echo "title: ${{ github.event.pull_request.title }}"
       - id: bad-files
-        run:
+        run: |
           bad_files=$(gh pr view --json files | jq '[.files[].path | select(endswith("go.mod") or endswith("go.sum") | not)] | length')
           if [ "$bad_files" -ne 0 ]; then
             echo "Found $bad_files files that are not go.mod or go.sum. Will not auto approve."
