add to ci needs

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -274,6 +274,7 @@ jobs:
       - integration
       - license
       - pr
+      - platform-xtest
     runs-on: ubuntu-latest
     if: always()
     steps:
