--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -227,7 +227,8 @@ jobs:
     needs: integration
     uses: opentdf/tests/.github/workflows/xtest.yml@feat/go-js-cross-sdk-testing
     with:
-      platform-ref: ${{ github.ref }}
+      # use commit instead of ref so we can "go get" specific sdk version
+      platform-ref: ${{ github.sha }}
 
   buflint:
     name: Protocol Buffer Lint and Gencode Up-to-date check
