feat(ci): Add xtest to ci workflow (#1195)
need to merge opentdf/tests PR first
https://github.com/opentdf/tests/pull/153

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -223,6 +223,13 @@ jobs:
           file: ./Dockerfile
           push: false
 
+  platform-xtest:
+    needs: integration
+    uses: opentdf/tests/.github/workflows/xtest.yml@main
+    with:
+      # use commit instead of ref so we can "go get" specific sdk version
+      platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
   buflint:
     name: Protocol Buffer Lint and Gencode Up-to-date check
     runs-on: ubuntu-22.04
@@ -268,6 +275,7 @@ jobs:
       - integration
       - license
       - pr
+      - platform-xtest
     runs-on: ubuntu-latest
     if: always()
     steps:
