--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -21,3 +21,7 @@ plugins:
     out: protocol/go
     opt:
       - paths=source_relative
+  - plugin: buf.build/bufbuild/validate-go
+    out: protocol/go
+    opt:
+      - paths=source_relative
