--- a/service/buf.yaml
+++ b/service/buf.yaml
@@ -3,6 +3,7 @@ deps:
   - buf.build/bufbuild/protovalidate
   - buf.build/googleapis/googleapis
   - buf.build/grpc-ecosystem/grpc-gateway
+  - buf.build/envoyproxy/protoc-gen-validate
 breaking:
   use:
     - FILE
