ignore breaking members in protos

--- a/service/buf.yaml
+++ b/service/buf.yaml
@@ -9,6 +9,10 @@ breaking:
     - PACKAGE
     - WIRE_JSON
     - WIRE
+  ignore:
+    # Ignore breaking changes temporarily to pass CI for removal of members in attribute values (reserved indexes for compatibility)
+    - policy/objects.proto
+    - policy/attributes/attributes.proto
 lint:
   allow_comment_ignores: true
   use:
