--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -63,7 +63,7 @@ jobs:
       permissions:
         pull-requests: read
       steps:
-        - uses: actions/github-script@v5
+        - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             script: |
@@ -90,8 +90,10 @@ jobs:
                 number: context.issue.number
               }
               const result = await github.graphql(query, variables)
-              console.log(result)
-
+              
+              if (result.repository.pullRequest.closingIssuesReferences.edges.length === 0) {
+                core.setFailed('No issue associated with this pull request');
+              }
   go:
     runs-on: ubuntu-22.04
     permissions:
