fix closing paren

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -107,7 +107,7 @@ jobs:
                 const comments = data.repository.pullRequest.comments.edges;
                 for (const comment of comments) {
                   // Minimize the previous comment if one exists
-                  if (comment.node.author.login === 'github-actions[bot]' && !comment.node.isMinimized) && comment.body.match(/<!-- associated-issue-action -->/) {
+                  if (comment.node.author.login === 'github-actions[bot]' && !comment.node.isMinimized && comment.body.match(/<!-- associated-issue-action -->/)) {
                     const minimizeCommentMutation = `mutation minimizeComment($id: ID!) {
                       minimizeComment(input: { subjectId: $id, classifier: OUTDATED }) {
                         minimizedComment {
