chore(core): Adds go version of init-keys
This is allows using the service with one fewer script

For now, it only implements creation of the two KAS keys, not the keycloak cert, which is more complex and requires running keytool or something similar as the go standard library doesn't seem to include the necessary formats

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -81,7 +81,7 @@ jobs:
           working-directory: ${{ matrix.directory }}
           skip-cache: true
       - if: matrix.directory == 'service'
-        run: .github/scripts/init-temp-keys.sh
+        run: go run ./service keys init
       - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
       - if: matrix.directory == 'service'
