--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -67,6 +67,7 @@ jobs:
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             script: |
+              core.debug(JSON.stringify(context));
               const query = `query ($owner: String!, $name: String!, $number: Int!) {
                 repository(owner: $owner, name: $name) {
                   pullRequest(number: $number) {
