try issues write

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -62,6 +62,7 @@ jobs:
       runs-on: ubuntu-22.04
       permissions:
         pull-requests: write
+        issues: write
       steps:
         - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
           with:
