--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -109,6 +109,7 @@ jobs:
               const comments = result.repository.pullRequest.comments.edges;
               for (const comment of comments) {
                 // Minimize the previous comment if one exists
+                console.debug(comment);
                 if (comment.node.author.login === 'github-actions[bot]' && !comment.node.isMinimized && comment.body.match(/<!-- associated-issue-action -->/)) {
                   const minimizeCommentMutation = `mutation minimizeComment($id: ID!) {
                     minimizeComment(input: { subjectId: $id, classifier: OUTDATED }) {
