--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -110,6 +110,7 @@ jobs:
               for (const comment of comments) {
                 // Minimize the previous comment if one exists
                 console.debug(comment);
+                console.debug(comment.body.match(/<!-- associated-issue-action -->/g) != null);
                 if (comment.node.author.login === 'github-actions[bot]' && !comment.node.isMinimized && comment.body.match(/<!-- associated-issue-action -->/g) != null) {
                   const minimizeCommentMutation = `mutation minimizeComment($id: ID!) {
                     minimizeComment(input: { subjectId: $id, classifier: OUTDATED }) {
